src/objects/Apttus__AgreementLineItem__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_CMConfig__LineStatus__c</fullName>
        <description>The line status</description>
        <label>Line Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Existing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LineType__c</fullName>
        <description>The line type</description>
        <label>Line Type</label>
        <picklist>
            <picklistValues>
                <fullName>Product/Service</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Misc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__NetAdjustmentPercent__c</fullName>
        <description>The net adjustment percent</description>
        <label>Net Adjustment (%)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OptionCost__c</fullName>
        <description>The rolled up extended cost of options for the product</description>
        <inlineHelpText>The rolled up extended cost of options for the product</inlineHelpText>
        <label>Option Cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected option</description>
        <label>Option</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Option Line Items</relationshipLabel>
        <relationshipName>AgreementOptionLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__OptionPrice__c</fullName>
        <description>The rolled up adjusted price of options for the product</description>
        <label>Option Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ParentBundleNumber__c</fullName>
        <description>Represents the parent bundle number associated with the child bundle</description>
        <inlineHelpText>Represents the parent bundle number associated with the child bundle</inlineHelpText>
        <label>Parent Bundle Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the line item</description>
        <inlineHelpText>ID of the payment term associated with the line item</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceAdjustmentAmount__c</fullName>
        <description>The price adjustment amount</description>
        <label>Price Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceAdjustmentType__c</fullName>
        <label>Price Adjustment Type</label>
        <picklist>
            <picklistValues>
                <fullName>% Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discount Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>% Markup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Markup Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Override</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceAdjustment__c</fullName>
        <description>The price adjustment is computed using aggregate price rules</description>
        <label>Price Adjustment</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceGroup__c</fullName>
        <description>The price group associated with the product or option</description>
        <inlineHelpText>The price group associated with the product or option</inlineHelpText>
        <label>Price Group</label>
        <picklist>
            <picklistValues>
                <fullName>Price Ramp</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the price list associated with the product or service</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceListItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list item</description>
        <label>Price List Item</label>
        <referenceTo>Apttus_Config2__PriceListItem__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceMethod__c</fullName>
        <description>The price method</description>
        <label>Price Method</label>
        <picklist>
            <picklistValues>
                <fullName>Per Unit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Percentage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Related Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tiered Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceType__c</fullName>
        <description>The price type</description>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recurring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Usage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PriceUom__c</fullName>
        <description>The pricing unit of measure for the product</description>
        <label>Pricing Uom</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PricingDate__c</fullName>
        <description>The pricing date, The product list price is determined based on this date.</description>
        <inlineHelpText>The pricing date, The product list price is determined based on this date.</inlineHelpText>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PrimaryLineNumber__c</fullName>
        <description>Represents the unique number for each primary line item</description>
        <inlineHelpText>Represents the unique number for each primary line item</inlineHelpText>
        <label>Primary Line Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ProductOptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product option</description>
        <label>Product Option</label>
        <referenceTo>Apttus_Config2__ProductOptionComponent__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SellingFrequency__c</fullName>
        <description>The selling frequency associated with the recurring or usage price</description>
        <label>Selling Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>One Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SellingTerm__c</fullName>
        <description>The selling term associated with the product or service</description>
        <label>Selling Term</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agreement Line Items (Ship To)</relationshipLabel>
        <relationshipName>AgreementLineItemsShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__StartDate__c</fullName>
        <description>The start date for products and services</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SubType__c</fullName>
        <description>The user defined sub type</description>
        <label>Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__SummaryGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the summary group associated with the item</description>
        <label>Summary Group</label>
        <referenceTo>Apttus_CMConfig__AgreementSummaryGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__TaxCodeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the tax code associated with the line item. Only applicable for taxable items.</description>
        <inlineHelpText>ID of the tax code associated with the line item. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Code</label>
        <referenceTo>Apttus_Config2__TaxCode__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__TaxInclusive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the price is tax inclusive. Only applicable for taxable items.</description>
        <inlineHelpText>Indicates whether the price is tax inclusive. Only applicable for taxable items.</inlineHelpText>
        <label>Tax Inclusive ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the line item is taxable</description>
        <inlineHelpText>Indicates whether the line item is taxable</inlineHelpText>
        <label>Taxable ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Term__c</fullName>
        <description>The pricing term associated with the product or service</description>
        <label>Pricing Term</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Type__c</fullName>
        <description>The user defined type</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__Uom__c</fullName>
        <description>The product or service unit of measure</description>
        <label>Product Uom</label>
        <picklist>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallon</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus__AgreementId__c</fullName>
        <description>ID of the associated agreement</description>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>The line description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__ExtendedPrice__c</fullName>
        <description>The extended price is Quantity X Term X (Base Price + Price Adjustment + Option Price)</description>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__ListPrice__c</fullName>
        <description>The list price for the product or service with no adjustments</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__NetPrice__c</fullName>
        <description>The net price for the product or service is the Adjusted Price after applying the Group Adjustment %</description>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the selected product or service</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Agreement Line Items</relationshipLabel>
        <relationshipName>AgreementLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Quantity__c</fullName>
        <description>The product or service quantity</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <label>Agreement Line Item</label>
    <nameField>
        <displayFormat>AL-{0000000000}</displayFormat>
        <label>Line Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>